@@ -215,6 +215,17 @@ PgSqlTaggedStatement tagged_statements[] = {
       "FROM lease6 "
       "WHERE subnet_id = $1"},
 
+    // GET_LEASE6_DUID
+    { 1, { OID_BYTEA },
+      "get_lease6_duid",
+      "SELECT address, duid, valid_lifetime, "
+        "extract(epoch from expire)::bigint, subnet_id, pref_lifetime, "
+        "lease_type, iaid, prefix_len, fqdn_fwd, fqdn_rev, hostname, "
+        "hwaddr, hwtype, hwaddr_source, "
+        "state, user_context "
+      "FROM lease6 "
+      "WHERE duid = $1"},
+
     // GET_LEASE6_EXPIRE
     { 3, { OID_INT8, OID_TIMESTAMP, OID_INT8 },
       "get_lease6_expire",
@@ -1507,20 +1518,20 @@ PgSqlLeaseMgr::getLeases6(SubnetID subnet_id) const {
 }
 
 Lease6Collection
-PgSqlLeaseMgr::getLeases6( const DUID& duid ) const {
+PgSqlLeaseMgr::getLeases6(const DUID& duid) const {
     LOG_DEBUG(dhcpsrv_logger, DHCPSRV_DBG_TRACE_DETAIL,
               DHCPSRV_PGSQL_GET_DUID)
               .arg(duid.toText());
 
-    Lease6Collection result = getLeases6();
+    // Set up the WHERE clause value
+    PsqlBindArray bind_array;
 
-    //erase the ones not containing the matching DUID
-    for (auto iter = result.begin(); iter != result.end();
-            iter++) {
-        if ((*iter)->duid_->getDuid() != duid.getDuid()) {
-            result.erase(iter);
-        }
-    }
+    // DUID
+    bind_array.add(duid.getDuid());
+    Lease6Collection result;
+
+    // query to fetch the data
+    getLeaseCollection(GET_LEASE6_DUID, bind_array, result);
 
     return (result);
 }
